# rabbitmq-test

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  go.mod
cmd/publisher/: emit_log.go
cmd/receiver/: receive_logs.go
src/: main.rs
