[package]
name = "rabbitmq-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# amiquip = "0.4.2"
# env_logger = "0.9.0"
# log = "0.4.14"
futures-lite = "1.11.2"
lapin = "2.1.1"
tokio = { version = "1.15.0", features = ["full"] }